--- a/about.html
+++ b/about.html
@@ -20,7 +20,8 @@
     </div>
 
     <div class="content">
-        <p>This Project Is Made by TYCM Students:- Mukund Nair, Tejas Nikam, Ayush Mule.</p>
+        <p>- This project is made using HTML, CSS, JAVASCRIPT languages.</p>
+        <p>- Topic: Digital Clock</p>
     </div>
 
     <script src="script.js"></script>
