--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <nav class="navbar">
         <button class="button">
             <a href="index.html">
+                <span class="popup">Home</span>
                 <svg
                   class="icon"
                   stroke="currentColor"
@@ -27,6 +28,7 @@
 
                 <button class="button">
                     <a href="clocks.html">
+                        <span class="popup">Clocks</span>
                         <svg
                       class="icon"
                       stroke="currentColor"
@@ -54,6 +56,7 @@
             </button>
               <button class="button">
               <a href="team.html">
+                  <span class="popup">Team</span>
                 <svg
                   class="icon"
                   stroke="currentColor"
@@ -71,6 +74,7 @@
     
               <button class="button">
                 <a href="about.html">
+                    <span class="popup">About</span>
                 <svg
                   class="icon"
                   stroke="currentColor"
