--- a/team.html
+++ b/team.html
@@ -10,6 +10,7 @@
     <nav class="navbar">
         <button class="button">
             <a href="index.html">
+                <span class="popup">Home</span>
                 <svg
                   class="icon"
                   stroke="currentColor"
@@ -28,6 +29,7 @@
 
             <button class="button">
                 <a href="clocks.html">
+                    <span class="popup">Clocks</span>
                     <svg
                   class="icon"
                   stroke="currentColor"
@@ -53,6 +55,7 @@
 
               <button class="button">
               <a href="team.html">
+                  <span class="popup">Team</span>
                 <svg
                   class="icon"
                   stroke="currentColor"
@@ -70,6 +73,7 @@
     
               <button class="button">
                 <a href="about.html">
+                    <span class="popup">About</span>
                 <svg
                   class="icon"
                   stroke="currentColor"
